fixed unreadable font-size for small phones in nav links

--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -42,14 +42,16 @@
         margin-right: 50px;
     }
 
-    .nav-links {
+     .nav-links {
         margin: 20px auto;
     }
 }
 
+
+/* fix font size */
 @media screen and (max-width: 391px) {
     .nav-link {
-        font-size: 10px;
-        margin: 8px auto;
+        font-size: 13px;
+        /* margin: 8px; */
     }
 }
